# newworld

./: .gitignore  README.md  pyproject.toml  run_live.py  run_monitor.py  run_multicoin.py  run_phase1.py  run_production.py  run_retrain.py  run_scan.py  run_strategy_test.py  run_validation.py
.claude/: ralph-loop.local.md  settings.local.json
backtest/: analysis.py  runner.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: settings.py
data/: loader.py
docs/: SCALPING_RESEARCH_PLAYBOOK.md
execution/: breakout_filter.py  capital_strategy.py  coin_classifier.py  dynamic_portfolio.py  grid_entry.py  meta_model.py  multitf_exit.py  position_manager.py  precision_entry.py  regime_detector.py  signal_filter.py  strategy_router.py  trendline_scanner.py
experiments/: NEXT_STEPS.md  collect_meta_data.py  intraday_event_explore.py  intraday_feature_ic.py  intraday_feature_ic_v2.py  iter_033_fullhist_swa.py  iter_034_regime_confidence.py  iter_035_ensemble.py  iter_036_rdrop.py  iter_037_sweep.py  iter_037_sweep_v2.py  iter_038_clean_labels.py  iter_039_multitf_regime.py  iter_040_regime_expert.py  iter_041_smoothing.py  iter_042_capacity.py  iter_043_validate.py  iter_044_longer.py  iter_045_precision_entry.py  iter_046_grid_trail.py  iter_047_adaptive_tbm.py  iter_048_multitf_exit.py  iter_049_dynamic_hold.py  iter_050_ablation.py  iter_051_conf_v2.py  iter_052_prob_hold.py  iter_053_feature_importance.py  iter_054_crossasset.py  iter_055_advanced_features.py  iter_056_vsn.py  iter_058_multicoin.py  iter_v6_universal.py  (+33 more)
(+221 files in other folders)
