[project]
name = "ultratm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nautilus_trader>=1.210.0",
    "catboost>=1.2",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b1",
    "pyarrow>=15.0",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "plotly>=5.18",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
